infra/local/k8s/security/network-policy.yml
#################################
# NetworkPolicy (Deny From Other Namespaces)
#################################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces
  namespace: lra-local
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
---
#################################
# NetworkPolicy (Expose External)
#################################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: expose-external
  namespace: lra-local
spec:
  podSelector:
    matchLabels:
      app: expose
  ingress:
  - from: []
